# fastapi-load-test

./: CLAUDE.md  LICENSE  README.md  api.yaml  openapitools.json  package-lock.json  package.json
docs/: api-development-roadmap.md  co2-api-roadmap.md  implementation-summary.md  logging-design.md  tdd-implementation-plan.md  tdd-issue-revisions.md
docs/api-implementations/: 01-comfort-score-api.md  02-cube-progress-api.md  03-zone-detection-api.md  04-temperature-predict-api.md  05-db-enhancement.md  06-energy-ranking-api.md
docs/issues/: 001-bigquery-connection.md  002-env-setup.md  003-sqlite-setup.md  004-air-quality-accessor.md  005-bigquery-queries.md  006-co2-analysis-logic.md  007-pydantic-models.md  008-api-implementation.md  009-error-handling.md  010-unit-tests.md  011-cloud-run-deploy.md  012-performance-optimization.md
output/: .dockerignore  .gcloudignore  Dockerfile  README.md  docker-compose.yaml  openapi.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
output/.openapi-generator/: FILES
output/src/: __init__.py
output/src/database/: __init__.py  accessor.py  config.py
output/src/openapi_server/: main.py
output/src/openapi_server/apis/: default_api.py  default_api_base.py  time_api.py  time_api_base.py
output/src/openapi_server/impl/: time_api_impl.py
output/src/openapi_server/models/: get_current_time200_response.py
output/tests/: __init__.py  conftest.py  test_default_api.py  test_time_api.py  test_time_api_impl.py
output/tests/database/: __init__.py  conftest.py  test_accessor.py  test_accessor_postgres.py  test_config.py
